# permut_lib

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  permut.rs  tests.rs
